--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mihir06121.github.io/portfolio",
+  "homepage": "https://mihirpanchal.com",
   "dependencies": {
     "@chakra-ui/icons": "",
     "@chakra-ui/react": "",
