--- a/package.json
+++ b/package.json
@@ -4,27 +4,24 @@
   "private": true,
   "homepage": "https://mihirpanchal.com",
   "dependencies": {
-    "@chakra-ui/icons": "",
-    "@chakra-ui/react": "",
-    "@emailjs/browser": "^3.6.2",
-    "@emotion/react": "",
-    "@emotion/styled": "",
-    "@sendgrid/mail": "^7.7.0",
-    "@testing-library/jest-dom": "",
-    "@testing-library/react": "",
-    "@testing-library/user-event": "",
-    "animate.css": "^4.1.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "framer-motion": "",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "gh-pages": "^4.0.0",
-    "html-react-parser": "^1.4.14",
-    "react": "",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "",
-    "react-render-html": "^0.6.0",
-    "react-router-dom": "",
-    "react-scripts": "",
-    "web-vitals": ""
+    "html-react-parser": "^3.0.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.3",
+    "typewriter-effect": "^2.19.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
